--- a/webapp/src/app/pacman-features/modules/assets/asset-dashboard/asset-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-dashboard/asset-dashboard.component.html
@@ -2,8 +2,7 @@
     <div class="asset-dashboard-container">
         <div class="asset-dashboard-wrapper flex flex-col">
             <div class="asset-dashboard-header">
-                <span class="title">Asset Overview</span>
-                <span class="description">Asset summary provides details about an asset group’s assets.</span>
+                <span class="title">Asset Summary</span>
             </div>
             <div class="type-count-container flex flex-row">
                 <div class="asset-summary-card" *ngFor="let tile of tiles">
@@ -11,7 +10,7 @@
                     <div class="asset-summary-upper-container flex flex-row">
                         <div class="asset-summary-content flex flex-col">
                             <div class="asset-summary-title capitalize">{{tile.mainContent.title}}</div>
-                            <div class="asset-summary-count">{{tile.mainContent.count}} </div>
+                            <div class="asset-summary-count" (click)="redirectTo(tile.mainContent.title)">{{tile.mainContent.count}} </div>
                         </div>
                         <div class="asset-summary-img">
                             <div class="tile-img-wrapper">
@@ -23,7 +22,7 @@
                         <div class="asset-summary-details-wrapper flex flex-row">
                             <div class="flex flex-col asset-summary-details" *ngFor="let data of tile.subContent">
                                 <div class="name">{{ data.title }}</div>
-                                <div class="count">{{data.count}}</div>
+                                <div class="count" (click)="redirectTo(data.title)">{{data.count}}</div>
                             </div>
                         </div>
                     </div>
@@ -34,21 +33,31 @@
                 <mat-card-header>
                     {{ card.header }}
                     <div class="date-dropdown-container">
-                        <app-dropdown (closeEventEmitter)="onDropdownClose()" (click)="ifCustomSelected()" [items]="['1 week', '1 month', '6 months', '12 months', 'All time', 'Custom']" [selectedItem]="selectedItem" (selected)="handleGraphIntervalSelection($event)"></app-dropdown>
+                        <app-dropdown (closeEventEmitter)="onDropdownClose()" (click)="ifCustomSelected()"
+                            [items]="['1 week', '1 month', '6 months', '12 months', 'All time', 'Custom']"
+                            [selectedItem]="selectedItem" (selected)="handleGraphIntervalSelection($event)">
+                        </app-dropdown>
                         <div mat-button #menuTrigger="matMenuTrigger" [matMenuTriggerFor]="menu"></div>
                         <mat-menu #menu="matMenu">
-                            <div class="date-selection-modal" >
-                                <app-date-selection [fromDate]="fromDate" [toDate]="toDate" (datesSelected)="dateIntervalSelected($event.from, $event.to)"></app-date-selection>
+                            <div class="date-selection-modal">
+                                <app-date-selection [fromDate]="fromDate" [toDate]="toDate"
+                                    (datesSelected)="dateIntervalSelected($event.from, $event.to)"></app-date-selection>
                             </div>
                         </mat-menu>
                     </div>
                 </mat-card-header>
                 <mat-card-content>
                     <div class="chart" style="overflow-y: scroll;">
-                        <div class="chart-wrapper" id="TotalAssetsSummaryTrend" style="height: 100%; width: 100%; background-color: white;">
+                        <div class="chart-wrapper" id="TotalAssetsSummaryTrend"
+                            style="height: 100%; width: 100%; background-color: white;">
                             <div [class.loader]="totalAssetsCountData.length==0 && totalAssetsCountDataError==''"></div>
-                            <app-error-message *ngIf="totalAssetsCountDataError" [selectedValue]="totalAssetsCountDataError"></app-error-message>
-                            <app-multiline-zoom-graph *ngIf="totalAssetsCountData.length>0 && totalAssetsCountDataError==''" [id]="'TotalAssetsSummaryTrend'" [showLegend]="true" [yAxisLabel]="'Total Assets'" [graphHeight]="graphHeight" [graphLinesData]="totalAssetsCountData"></app-multiline-zoom-graph>
+                            <app-error-message *ngIf="totalAssetsCountDataError"
+                                [selectedValue]="totalAssetsCountDataError"></app-error-message>
+                            <app-multiline-zoom-graph
+                                *ngIf="totalAssetsCountData.length>0 && totalAssetsCountDataError==''"
+                                [id]="'TotalAssetsSummaryTrend'" [showLegend]="true" [yAxisLabel]="'Total Assets'"
+                                [graphHeight]="graphHeight" [graphLinesData]="totalAssetsCountData">
+                            </app-multiline-zoom-graph>
                         </div>
                     </div>
                 </mat-card-content>
