--- a/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.css
+++ b/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.css
@@ -52,9 +52,9 @@
 }
 
 .title-text {
-  display: inline-block;
-  font: var(--text-headline-6);
-  color: var(--text-high-emphasis);
+  font-size: 2em;
+  font-family: var(--text-font-family);
+  font-weight: 500;
 }
 
 .arrow-img {
