--- a/webapp/src/app/pacman-features/secondary-components/policy-violation-desc/policy-violation-desc.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/policy-violation-desc/policy-violation-desc.component.css
@@ -30,6 +30,10 @@
     font-family: var(--text-light-font-family);
     line-height: 1.2;
     flex-wrap: wrap;
+    text-transform: capitalize;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .each-label {
