--- a/webapp/src/app/pacman-features/modules/admin/policies/policies.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/policies/policies.component.css
@@ -39,10 +39,6 @@
     color: rgb(85, 85, 85);
 }
 
-.admin-widgets-header {
-    height: 6em;
-    padding: 1.9em 1.8em;
-}
 
 .admin-widgets-header h1 {
     text-transform: capitalize;
@@ -81,6 +77,7 @@
 }
 
 .submit-btn {
+    max-height: 2.4em;
     border: none;
     border-radius: 7px;
     background-color: var(--primary-400);
