--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.css
@@ -29,15 +29,10 @@
 }
 
 .violations-header .title {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px 0px 8px;
-    width: 100%;
-    line-height: 22px;
-    font: var(--text-headline-6);
-    color: var(--text-high-emphasis);
+    font-size: 2em;
+    font-family: var(--text-font-family);
+    font-weight: 500;
+    padding-bottom: 2px;
 }
 
 .violations-header .description{
