--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.css
@@ -35,8 +35,9 @@
   padding-bottom: 24px;
 }
 .policy-header .title{
-  font: var(--text-headline-6);
-  color: var(--text-high-emphasis);
+  font-size: 2em;
+  font-family: var(--text-font-family);
+  font-weight: 500;
 }
 
 .pk-header {
