--- a/webapp/src/app/pacman-features/modules/compliance/tagging-compliance/tagging-compliance.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/tagging-compliance/tagging-compliance.component.css
@@ -56,7 +56,8 @@
 }
 
 .floating-widgets-header .title-text{
-    font: var(--text-headline-6);
-    color: var(--text-high-emphasis);
+    font-size: 2em;
+    font-family: var(--text-font-family);
+    font-weight: 500;
 }
-/*****************************************************************/
+    /*****************************************************************/
