--- a/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
@@ -1,52 +1,26 @@
-<!--
- *Copyright 2018 T Mobile, Inc. or its affiliates. All Rights Reserved.
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); You may not use
- * this file except in compliance with the License. A copy of the License is located at
- * 
- * http://www.apache.org/licenses/LICENSE-2.0
- * 
- * or in the "license" file accompanying this file. This file is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, express or
- * implied. See the License for the specific language governing permissions and
- * limitations under the License.
- -->
-
  <div class="floating-widgets-section flex flex-col issue-listing-wrapper" [class.filter-absent]='filters.length == 0'>
-    <div class="padding-top"></div>
-    <div class="floating-widgets-header flex flex-between">
-        <div>
-            <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
-            <h1 class="title-text">{{pageTitle}}</h1>
-        </div>
-        <div class='flex relative z-index'>
-            <div class='drop-options'>
-                <app-searchable-dropdown *ngIf='filterTypeLabels.length' [firstDD]='true' (selection)='changeFilterType($event)' [placeholder]="'Select filter type'" [items]='filterTypeLabels'></app-searchable-dropdown>
-            </div>
-            <div class='drop-search-box'>
-                <app-searchable-dropdown (selection)='changeFilterTags($event)' [placeholder]="'Search filter tags'" [items]='filterTagLabels'></app-searchable-dropdown>
-            </div>
-        </div>
+    <div *ngIf="backButtonRequired" class="breadcrumb-container" style="padding-bottom: 18px">
+        <app-breadcrumb *ngIf="breadcrumbLinks.length>0" [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
+     </div>
+    <div class="flex">
+        <img class="arrow-img" *ngIf="backButtonRequired" (click)="navigateBack()" style="height: 1.4em;" src="../assets/icons/left-arrow.svg">
+        <h6 class="title-text">{{pageTitle}}</h6>
     </div>
-    <div class='floating-widgets-filter-wrapper' *ngIf='filters.length'>
-        <app-filtered-selector (deleteAllFilters)="deleteFilters($event)" (deleteFilter)="deleteFilters($event)" [(filteredArray)]="filters" [(mandatoryFilter)]="mandatory"></app-filtered-selector> 
-       
-
-    </div>
-    <div class="floating-widgets-container data-table-container">
+    <div class="data-table-container">
         <section>
             <ul>
                 <li class="widget-wrapper relative">
                     <div class="relative">
-                        <app-data-table [searchTextValues]=searchTxt [showGenericMessage]='showGenericMessage' 
-                            [errorValue]='errorValue' [parentName]="'taggingTargetMessage'" [showingArr]='showingArr' 
-                            [outerArr]='outerArr' [searchableHeader]='true' [allColumns]='allColumns' [dataHead]="'All Assets'" 
-                            (selectedRow)='goToDetails($event)' [firstPaginator]='firstPaginator' [lastPaginator]='lastPaginator' 
-                            [totalRows]='totalRows' [currentPointer]='currentPointer' (searchRowTxt)='searchCalled($event)' 
-                            (previousPageCalled)='prevPg()' (nextPageCalled)='nextPg()' (searchTriggerred)='callNewSearch()' 
-                            [popRows]='popRows' (rowClickText)='handlePopClick($event)' (headerColNameSelected)="handleHeaderColNameSelection($event)" 
-                            [headerColName]="headerColName" [direction]="direction" [searchPassed]='searchTxt'>
-                        </app-data-table>
+                        <app-table style="height: 100%; width: 100%;" (rowSelectEventEmitter)="goToDetails($event)"
+                        [data]="tableData" [columnWidths]="columnWidths"
+                        [columnsSortFunctionMap]="columnsSortFunctionMap" (headerColNameSelected)="handleHeaderColNameSelection($event)" 
+                        [headerColName]="headerColName" [direction]="direction" [whiteListColumns]="whiteListColumns" [tableTitle]="tableTitle"
+                        [imageDataMap]="tableImageDataMap" [showAddRemoveCol]="true" [showSearchBar]="true" (searchCalledEventEmitter)="callNewSearch($event)"
+                        [searchQuery]="searchTxt" (nextPageCalled)="nextPg()" (downloadClicked)="handlePopClick($event)" (selectedFilterType)='changeFilterType($event)'
+                        (selectedFilter)="changeFilterTags($event)" [filteredArray]="filters" [filterTypeLabels]="filterTypeLabels" [filterTagLabels]="filterTagLabels"
+                        (deleteFilters)="deleteFilters($event)" [filterTypeOptions]="filterTypeOptions" [tableErrorMessage]='tableErrorMessage'
+                        [showDownloadBtn]="showDownloadBtn" [showFilterBtn]="showFilterBtn" [onScrollDataLoader]="onScrollDataLoader" [totalRows]="totalRows" (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)"
+                        [tableScrollTop]="tableScrollTop"></app-table>
                         <div class="data-table-desc">{{dataTableDesc}}</div>
                     </div>
                 </li>
