fix: fixed breadcrumbs in admin screens and fixed few p0 items

--- a/webapp/src/app/pacman-features/modules/assets/asset-dashboard/asset-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-dashboard/asset-dashboard.component.html
@@ -55,7 +55,7 @@
                                 [selectedValue]="totalAssetsCountDataError"></app-error-message>
                             <app-multiline-zoom-graph
                                 *ngIf="totalAssetsCountData.length>0 && totalAssetsCountDataError==''"
-                                [id]="'TotalAssetsSummaryTrend'" [showLegend]="true" [yAxisLabel]="'Total Assets'"
+                                [id]="'TotalAssetsSummaryTrend'" [showLegend]="true" [yAxisLabel]="'Count'"
                                 [graphHeight]="graphHeight" [graphLinesData]="totalAssetsCountData">
                             </app-multiline-zoom-graph>
                         </div>
