--- a/webapp/src/app/pacman-features/secondary-components/policy-violation-desc/policy-violation-desc.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/policy-violation-desc/policy-violation-desc.component.html
@@ -69,7 +69,7 @@
     </div>
     <div class="policy-violation-label flex flex-col" *ngIf="violationData.violationModifiedDate">
         <div class="policy-violation-label-header capitalize">
-            Last Modified
+            Last Status Change
         </div>
         <div class="policy-violation-label-content" title="{{violationData.violationModifiedDate}}">
             <div>
