--- a/webapp/src/app/pacman-features/modules/assets/asset-distribution/asset-distribution.component.css
+++ b/webapp/src/app/pacman-features/modules/assets/asset-distribution/asset-distribution.component.css
@@ -43,14 +43,6 @@ flex-grow: 1;
   font: var(--text-body-1);
 }
 
-.title-header{
-  font: var(--text-subtitle);
-  padding: 16px 24px;
-  background-color: var(--background-white);
-  border: 1px solid var(--border-200);
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-}
 
 .overall-distribution{
   margin: 0px 24px;
@@ -90,11 +82,10 @@ border-bottom: 2px solid var(--border-200);
 .distribution-content{
   display: flex;
   flex-direction: row;
-  height: calc(100% - 100px);
+  height: calc(100% - 35px);
   overflow: hidden;
   border: 1px solid var(--border-200);
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
+  border-radius: 8px;
   background-color: var(--background-white);
 }
 
@@ -110,32 +101,7 @@ border-bottom: 2px solid var(--border-200);
   background: var(--background-white);
   border-radius: 4px;
   border: 1px solid var(--border-200);
-  width: 35%;
-  min-width: 300px;
-  }
-  
-.legend {
-display: flex;
-flex-direction: row;
-align-items: center;
-padding: 0px;
-gap: 32px;
-flex: none;
-order: 0;
-flex-grow: 0;
 }
-
-.legend-color{
-  width: 14px;
-  height: 14px;
-}
-
-.legend-wrap{
-  display: flex;
-  gap: 8px;
-  align-items: center;
-}
-
 .sort-img{
   width: 14px;
   height: 14px;
@@ -162,7 +128,7 @@ flex-grow: 0;
   .search-container{
     padding: 8px 24px;
     background-color: var(--background-white);
-    border: 1px solid var(--border-200);
+    border-bottom: 2px solid var(--border-200);
   }
 
   .column-wrapper{
