--- a/webapp/src/app/pacman-features/modules/compliance/issue-details/issue-details.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-details/issue-details.component.html
@@ -51,8 +51,8 @@
                                     Additional Actions
                                 </header>
                                 <div class="btn-wrapper-additional-actions" *ngIf='adminAccess'>
-                                    <app-button *ngIf="!exceptionAdded" (onClickInner)="showOtherDiv()">+ Add Exception</app-button>
-                                    <app-button *ngIf="exceptionAdded" (onClickInner)="showOtherDivRevoke();revokeException()"> Revoke Exception</app-button>
+                                    <app-button *ngIf="!exceptionAdded" (onClickInner)="showOtherDiv()">+ Add Exemption</app-button>
+                                    <app-button *ngIf="exceptionAdded" (onClickInner)="showOtherDivRevoke();revokeException()"> Revoke Exemption</app-button>
                                 </div>
                                 <div class="btn-wrapper-additional-actions" *ngIf="GLOBAL_CONFIG.optional.pacmanIssue.emailPacManIssue.ISSUE_MAIL_TEMPLATE_URL">
                                     <app-button-icon [iconSrc]="emailIcon.icon" (onClickInner)="showOtherDivEmail()">Email Issue
@@ -101,10 +101,10 @@
                                             <div *ngIf='checkRevoke' class="crossmark draw" [class.crossmark-show]='showLoadcompleteRevoke'></div>
                                         </div>
                                     </div>
-                                    <div class="error_msg_exception" *ngIf='showLoadcompleteRevoke && checkRevoke'>Failed in Revoking Issue Exception !
+                                    <div class="error_msg_exception" *ngIf='showLoadcompleteRevoke && checkRevoke'>Failed in Revoking Issue Exemption !
                                     </div>
                                     <div class="success_msg_exception" *ngIf='showLoadcompleteRevoke && !checkRevoke'>
-                                        Successfully Revoked Issue Exception!
+                                        Successfully Revoked Issue Exemption!
                                     </div>
                                 </section>
                             </div>
@@ -138,7 +138,7 @@
                             <div class="actions-wrapper back" [class.after-click-button-opposite]='showOpposite'>
                                 <header class="recommend-flip flex-between flex flex-align-center">
                                     <div class="header-text">
-                                        Add Exception
+                                        Add Exemption
                                     </div>
                                     <div class="delete-img" [class.showNone]='showNone' (click)="showOtherDiv()">
                                         <img style="height: 1.8em;" src="../assets/icons/x-icon.svg">
@@ -166,9 +166,9 @@
                                             <div *ngIf='!check' class="crossmark draw" [class.crossmark-show]='showLoadcomplete'></div>
                                         </div>
                                     </div>
-                                    <div class="error_msg_exception" *ngIf='showLoadcomplete && !check'>Exception not added
+                                    <div class="error_msg_exception" *ngIf='showLoadcomplete && !check'>Exemption not added
                                     </div>
-                                    <div class="success_msg_exception" *ngIf='showLoadcomplete && check'>Exception added successfully
+                                    <div class="success_msg_exception" *ngIf='showLoadcomplete && check'>Exemption added successfully
                                     </div>
                                 </section>
                             </div>
