--- a/webapp/src/reset.css
+++ b/webapp/src/reset.css
@@ -106,7 +106,7 @@ video {
     border: 0;
     font-size: 100%;
     font: inherit;
-    vertical-align: baseline;
+    /* vertical-align: baseline; */
 }
 
 
