--- a/webapp/src/app/shared/table/table.component.css
+++ b/webapp/src/app/shared/table/table.component.css
@@ -22,11 +22,16 @@
   border-radius: var(--border-radius) var(--border-radius) 0px 0px;
 }
 
+.table-count-info{
+  font: var(--text-body-2);
+}
+
 .table-header .table-column-modifier{
     /* background-color: var(--background-white); */
     border: 1px solid var(--border-100);
     height: 64px;
     padding: 12px 19px 12px 24px;
+    align-items: center;
 }
 
 .table-header .search-bar-wrapper {
@@ -65,9 +70,12 @@
     /* margin-left: auto; */
 }
 
-.table-header .header-right .add-remove-columns-wrapper{
-    margin-left: auto;
-    height: 25px;
+.add-remove-columns-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+    /* margin-left: auto; */
+    /* height: 25px; */
     border: 1px solid var(--border-200);
     padding: 0px 16px;
     font: var(--text-caption);
@@ -84,6 +92,9 @@
   align-items: center;
   font: var(--text-caption);
   color: var(--text-medium-emphasis);
+  align-self: center;
+  margin-right: 12px;
+  border-radius: 4px;
 }
 
 .filter-wrapper img{
@@ -183,12 +194,12 @@
     padding: 12px;
 }
 
-.table-header .add-remove-columns-wrapper ::ng-deep .mat-select-value,
+.add-remove-columns-wrapper ::ng-deep .mat-select-value,
 .table-header .search-in-columns ::ng-deep .mat-select-value{
     display: none;
 }
 
-.table-header .header-right .add-remove-columns-wrapper ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-infix{
+.add-remove-columns-wrapper ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-infix{
     width: 20px;
 }
 
@@ -216,7 +227,7 @@
     height: 100% !important;
 }
 
-.header-right .add-remove-columns-wrapper ::ng-deep .mat-select-arrow {
+.add-remove-columns-wrapper ::ng-deep .mat-select-arrow {
     width: 10px !important;
     height: 10px !important;
     border: none !important;
@@ -241,16 +252,13 @@
 
 table {
   width: 100%;
-  max-height: 650px;
+  table-layout: fixed;
 }
 
 th.mat-sort-header-sorted {
   color: black;
 }
 
-tr {
-  display: flex;
-}
 
 tr.mat-row:hover{
   background-color: var(--background-grey);
@@ -284,6 +292,14 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
   overflow: hidden;
   text-overflow: ellipsis;
   min-width: 100px;
+}
+
+.download-btn{
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  font: var(--text-caption);
+  color: var(--text-medium-emphasis);
 }
 
 .more-wrapper{
