--- a/webapp/src/app/shared/table/table.component.html
+++ b/webapp/src/app/shared/table/table.component.html
@@ -1,21 +1,10 @@
-<div class="table-container flex flex-col">
+<div #tableContainer class="table-container flex flex-col">
         <div class="table-header">
         <div class="table-title flex flex-row" *ngIf="tableTitle">
             <div class="left">
                 {{ tableTitle }}
             </div>
-            <div class="table-count-info" style="margin-left: 20px;">
-                <span *ngIf="isDataLoading">Loading...</span>
-                <span *ngIf="!isDataLoading">Loaded {{this.dataSource.data.length}} of {{ totalRows }} rows</span>
-            </div>
             <div class="right">
-                <div class="more-wrapper" *ngIf="showDownloadBtn">
-                    <!-- <img mat-button [matMenuTriggerFor]="menu" src="/assets/icons/three-dots.svg" alt="">
-                    <mat-menu #menu="matMenu">
-                    <button (click)="download()" mat-menu-item>Download</button>
-                    </mat-menu> -->
-                    <img (click)="download()" src="/assets/icons/download-icon.svg" alt="">
-                </div>
             </div>
         </div>
         <div class="table-column-modifier flex flex-row" *ngIf="showSearchBar || showAddRemoveCol">
@@ -33,24 +22,8 @@
                             </mat-select>
                         </mat-form-field>
                     </div> -->
-                </div>
-            </div>
-            <div class="header-right flex flex-row">
-                <div class="add-remove-columns-wrapper" *ngIf="showAddRemoveCol">
-                    <mat-form-field>
-                        <mat-select #select multiple disableOptionCentering>
-                            <mat-option class="disabled-option" disabled="true" value="disabled">Show/hide columns</mat-option>
-                            <mat-option #allColumnsSelected (click)="toggleAllSelection()" value="selectAll">Select All</mat-option>
-                            <mat-option (click)="optionClick()" *ngFor="let column of displayedColumns" [value]="column">
-                            {{column}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <span> Columns </span>
-                </div>
-                <div class="filter-wrapper flex flex-row" (click)="showFilterModal = !showFilterModal;" [matMenuTriggerFor]="filterModal" *ngIf="showFilterBtn">
-                    <img src="/assets/icons/filter-icon.svg" alt="">
-                    <span>Filter</span>
+                    <div class="filter-wrapper flex flex-row" [matMenuTriggerFor]="filterModal" *ngIf="showFilterBtn">
+                    <img style="padding: 0; height: auto;" src="/assets/icons/filters-icon.svg" alt="">
                 </div>
                 <mat-menu #filterModal="matMenu">
                         <div class="filter-modal-container" (click)="$event.stopPropagation()">
@@ -85,10 +58,34 @@
                     </div>
                 </div>
                     </mat-menu>
-                <div class="more-wrapper" *ngIf="!tableTitle && showDownloadBtn">
+                </div>
+            </div>
+            <div class="table-count-info" style="margin-left: 20px;">
+                <span *ngIf="isDataLoading">Loading...</span>
+                <span *ngIf="!isDataLoading">{{this.dataSource.data.length}} Results</span>
+            </div>
+            <div class="header-right flex flex-row">
+                
+                
+                <div class="more-wrapper">
                     <img mat-button [matMenuTriggerFor]="menu" src="/assets/icons/three-dots.svg" alt="">
                     <mat-menu #menu="matMenu">
-                    <button (click)="download()" mat-menu-item>Download</button>
+                        <button *ngIf="showDownloadBtn" class="download-btn" mat-menu-item (click)="download()">
+                            <img  src="/assets/icons/download-icon.svg" alt="">
+                            <span >Export</span>
+                        </button>
+                        <div mat-menu-item (click)="openColumnSelectorModal()" class="add-remove-columns-wrapper" *ngIf="showAddRemoveCol">
+                            <mat-form-field>
+                                <mat-select #select multiple disableOptionCentering>
+                                    <mat-option class="disabled-option" disabled="true" value="disabled">Show/hide columns</mat-option>
+                                    <mat-option #allColumnsSelected (click)="toggleAllSelection()" value="selectAll">Select All</mat-option>
+                                    <mat-option (click)="optionClick()" *ngFor="let column of displayedColumns" [value]="column">
+                                    {{column}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                            <span> Columns </span>
+                        </div>
                     </mat-menu>
                 </div>
             </div>
@@ -102,11 +99,11 @@
             <ng-container *ngFor="let column of whiteListColumns;" [matColumnDef]="column">
                 <th [style.width]="columnWidths[column]*screenWidthFactor+'px'" mat-header-cell *matHeaderCellDef mat-sort-header> {{ column }} </th>
                 <td [style.width]="columnWidths[column]*screenWidthFactor+'px'" class="capitalize" mat-cell *matCellDef="let element"> 
-                    <div class="nowrap-ellipsis" *ngIf="element[column]">
+                    <div class="nowrap-ellipsis" *ngIf="element[column] || element[column]==0">
                         <img *ngIf="imageDataMap[element[column]] && imageDataMap[element[column]]['image']" style="vertical-align: text-bottom;" src="/assets/icons/{{imageDataMap[element[column]].image}}.svg" [title]="element[column]"> 
                     <span  *ngIf="!imageDataMap[element[column]] || !imageDataMap[element[column]].imageOnly" [title]="element[column]=='NR'?'No Resources':element[column]">{{ element[column] }} </span>
                     </div>
-                    <div class="nowrap-ellipsis" *ngIf="!element[column]">
+                    <div class="nowrap-ellipsis" *ngIf="!element[column] && element[column]!=0">
                         <span>No Data</span>
                     </div>
                 </td>
