--- a/webapp/src/app/post-login-app/post-login-app.component.html
+++ b/webapp/src/app/post-login-app/post-login-app.component.html
@@ -15,9 +15,9 @@
 <div class="pacman-logged-in-section" [class.is-offine]="isOffline" [ngStyle]="
     theme !== undefined && { 'background-image': 'url(' + theme.bg + ')' }
   ">
-  <section class="post-login-body" [@mainRouterTransition]="getState(o)">
+  <section class="post-login-body">
     <app-header></app-header>
-    <button class="sidenav-expander flex flex-center" mat-button (click)="sidenavExpanderClicked()"
+    <!-- <button class="sidenav-expander flex flex-center" mat-button (click)="sidenavExpanderClicked()"
       [ngStyle]="{ 'left.px':sidenavExpanderLeft, 'transform': rotationVar}"><img
         src="/assets/icons/Path.svg" /></button>
     <mat-sidenav-container autosize [hasBackdrop]="false">
@@ -33,9 +33,9 @@
           <router-outlet #o="outlet" (deactivate)="onDeactivate($event)"></router-outlet>
         </div>
       </mat-sidenav-content>
-    </mat-sidenav-container>
+    </mat-sidenav-container> -->
   </section>
-  <div class="next-level-routing-container" [ngClass]="{ active: details.isActivated, inactive: !details.isActivated }">
+  <!-- <div class="next-level-routing-container" [ngClass]="{ active: details.isActivated, inactive: !details.isActivated }">
     <a class="nextLevel-close layer-delete-title show-cross" (click)="navigateBackToRootLevel()">
       <img class="layer-delete-icon" src="../../assets/icons/x-icon.svg" />
     </a>
@@ -45,17 +45,17 @@
     <div class="top-layer-page">
       <router-outlet name="details" #details="outlet"></router-outlet>
     </div>
-  </div>
+  </div> -->
 </div>
-<router-outlet name="modalBGMenu"></router-outlet>
+<!-- <router-outlet name="modalBGMenu"></router-outlet>
 <router-outlet name="kydModal"></router-outlet>
 <router-outlet name="helpTextModal"></router-outlet>
 <router-outlet name="modal"></router-outlet>
-<app-toast-notification></app-toast-notification>
+<app-toast-notification></app-toast-notification> 
 <div [class.hide]="!showPacLoader.length" class="pacman-anim">
   <img src="../assets/icons/Download-active.svg" />
 </div>
 <img src="/assets/images/bg/background.png" width="0px" height="0px" class="hide" />
 <img src="/assets/images/bg/bg-domain3.png" width="0px" height="0px" class="hide" />
 <img src="/assets/images/bg/bg-domain2.png" width="0px" height="0px" class="hide" />
-<img src="/assets/images/bg/bg-domain1.png" width="0px" height="0px" class="hide" />
+<img src="/assets/images/bg/bg-domain1.png" width="0px" height="0px" class="hide" />-->
