fix: fixed triggering of scroll event when new search is done or ag is changed and removed unusable code

--- a/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.html
@@ -25,7 +25,7 @@
             <div class="header-description" title="{{resourceType}}/{{decodedResourceId}}">
                 ({{resourceType}}/{{decodedResourceId}})</div>
         </div>
-        <div class="floating-widgets-container">
+        <div class="floating-widgets-container" style="overflow: unset;">
             <section>
                 <ul class='adjust-padding'>
                     <li class="widget-wrapper">
