--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
@@ -26,10 +26,8 @@
     <div class="container-4" (window:resize)="onresize($event)">
         <mat-grid-list [cols]="breakpoint4" rowHeight="504px">
             <mat-grid-tile style="background-color: var(--background-white);">
-                <div [class.loader]="complianceTableData.length==0 && tableErrorMessage==''"></div>
-                <app-error-message *ngIf="tableErrorMessage" [selectedValue]="tableErrorMessage"></app-error-message>
                 <app-table style="height: 100%; width: 100%;" (rowSelectEventEmitter)="goToDetails($event)"
-                    [data]="complianceTableData" [columnWidths]="columnWidths"
+                    [data]="complianceTableData" [columnWidths]="columnWidths" [tableErrorMessage]='tableErrorMessage' [tableDataLoaded]='tableDataLoaded'
                     [columnsSortFunctionMap]="columnsSortFunctionMap" (headerColNameSelected)="handleHeaderColNameSelection($event)" 
                     [headerColName]="headerColName" [direction]="direction" [whiteListColumns]="whiteListColumns" [tableTitle]="tableTitle"
                     [imageDataMap]="tableDataMap" [showAddRemoveCol]="true" [showSearchBar]="true" (searchCalledEventEmitter)="callNewSearch($event)"
