fix: fixed create sticky exceptions bug

--- a/webapp/src/app/pacman-features/modules/admin/sticky-exceptions/create-sticky-exceptions/create-sticky-exceptions.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/sticky-exceptions/create-sticky-exceptions/create-sticky-exceptions.component.css
@@ -1736,9 +1736,10 @@ button.attrbutton:hover {
   overflow-y: auto;
 }
 
-::ng-deep .cdk-overlay-connected-position-bounding-box {
+/* below code is disturbing filters position in violations */
+/* ::ng-deep .cdk-overlay-connected-position-bounding-box {
   position: relative !important;
-}
+} */
 ::ng-deep #cdk-overlay-1 {
   top: 280px!important;
 }
