"feat: added ResourceID link and Policy link to the email template"

--- a/emailTemplates/pacman-v2-email-template/html.handlebars
+++ b/emailTemplates/pacman-v2-email-template/html.handlebars
@@ -272,7 +272,7 @@
     <ul class="desc-details">
       <div class="container">
         <li class="title">Policy Violated</li>
-        <li class="value">${policyViolated}</li>
+        <li class="value"><a class="colored" href=${policyUrl}>${policyViolated}</a></li>
       </div>
       <div class="container">
         <li class="title">Policy Description</li>
@@ -284,7 +284,7 @@
       </div>
       <div class="container">
         <li class="title">Resource Id</li>
-        <li class="value">${resourceId}</li>
+        <li class="value"><a class="colored" href=${resourceUrl}>${resourceId}</a></li>
       </div>
       <div class="container">
         <li class="title">Creation Date</li>
