--- a/webapp/src/app/pacman-features/modules/assets/asset-distribution/asset-distribution.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-distribution/asset-distribution.component.html
@@ -25,7 +25,7 @@
                 </span>
                 <img class="slider-img" [class.collapsed]="isCollapsed" src='/assets/icons/slider.svg' (click)="expandAssetTypeList()">
             </div>
-            <div class="search-container">
+            <div class="search-container" [class.isCollapsed]="isCollapsed">
                 <div class="search-bar">
                     <div class="header-search-content-container">
                         <img _ngcontent-c3="" class="search-icon" alt="" src="/assets/icons/header-search.svg">
