--- a/webapp/src/app/shared/table/table.component.css
+++ b/webapp/src/app/shared/table/table.component.css
@@ -87,7 +87,7 @@
   border: 1px solid var(--border-200);
   padding: 4px 12px;
   cursor: pointer;
-  margin-left: 12px;
+  /* margin-left: 12px; */
   gap: 8px;
   align-items: center;
   font: var(--text-caption);
@@ -129,7 +129,8 @@
 }
 
 .filter-modal-container .filters-wrapper .filter{
-  gap: 8px
+  gap: 8px;
+  align-items: center;
 }
 
 .filter-modal-container .filters-wrapper{
@@ -167,6 +168,19 @@
   overflow-y: scroll;
   min-height: 50px;
   max-height: 100px;
+}
+
+.filters-container ::ng-deep .mat-form-field-infix{
+  padding: 8px 16px;
+  min-width: 150px;
+}
+
+.filters-container ::ng-deep .mat-form-field-label{
+  padding: 8px 16px;
+}
+
+.filters-container ::ng-deep .mat-select-arrow-wrapper{
+  align-self: baseline;
 }
 
 .table-header .search-in-columns{
